<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">

        <LinearLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top|center_horizontal"
            android:layoutDirection="rtl"
            android:minWidth="280dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_top_blue_p_dialog"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/pleaseChooseDateTimeP"
                android:textColor="@color/whiteDialog"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/dateRv"
                        android:layout_width="0dp"
                        android:layout_height="220dp"
                        android:layout_weight="1" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/hourRv"
                        android:layout_width="0dp"
                        android:layout_height="220dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/border_top_bottom_accent_p_dialog" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/chooseTimeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/chooseP"
                    android:textColor="@color/accentColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/cancelP"
                    android:textColor="@color/accentColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</layout>